--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "sortablejs": "^1.15.0",
     "sweetalert2": "^11.7.5",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "styled-components": "^5.3.10"
   }
 }
